--- a/New_app/public/frontEnd/css/main.css
+++ b/New_app/public/frontEnd/css/main.css
@@ -36,7 +36,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto', sans-serif;
 }
 
-.btn:hover, 
+.btn:hover,
 .btn:focus{
   outline: none;
   box-shadow: none;
@@ -138,7 +138,7 @@ a#scrollUp i{
   padding-bottom: 5px;
   padding-top: 0px;
 /*  background-image:  url(../images/home/greenw.png);*/
- 
+
 
 }
 .logo{
@@ -146,15 +146,15 @@ a#scrollUp i{
     height: auto;
     display: flex;
     margin: 5px;
-    
-    
-     
+
+
+
 }
 
 .header-middle .container .row .col-sm-8 {
     padding-right: 0;
     padding-top: 5px;
-  
+
 }
 
 
@@ -201,8 +201,8 @@ a#scrollUp i{
     border-radius: 25px;
     background:white;
     margin-left: 2px;
-    
-    
+
+
 }
 
 
@@ -252,7 +252,7 @@ a#scrollUp i{
 }
 
 .search_box input {
-  background: white;   
+  background: white;
   border: medium none;
   border-radius:  50px;
   color: black;
@@ -272,7 +272,7 @@ a#scrollUp i{
 
 /*  Dropdown menu*/
 
-.navbar-header 
+.navbar-header
 .navbar-toggle .icon-bar {
     background-color: #fff;
 }
@@ -325,7 +325,7 @@ ul.sub-menu {
 }
 
 .fa-angle-down{
-  padding-left: 5px; 
+  padding-left: 5px;
 }
 
 @-webkit-keyframes fadeInUp {
@@ -341,7 +341,7 @@ ul.sub-menu {
     transform: translateY(0);
   }
 }
-  
+
 /*************************
 *******Footer CSS******
 **************************/
@@ -418,7 +418,7 @@ ul.sub-menu {
   position: relative;
   color: black;
   font-size: 20px;
-    
+
 }
 
 .fa-facebook:hover {
@@ -507,7 +507,7 @@ ul.sub-menu {
   font-size: 20px;
 }
 
-.searchform  button:hover, 
+.searchform  button:hover,
 .searchform  button:focus{
 	background-color:#45B649;
 }
@@ -625,11 +625,11 @@ ul.sub-menu {
 
 .right {
   right: 0;
-    
+
 }
 .left-side{
     background-color: #F6FBE1;
-  
+
 }
 .category-products {
   border: 5px solid #F7F7F0;
@@ -654,9 +654,9 @@ ul.sub-menu {
     padding: 10px;
     background-color: white;
     text-align: center;
-   
-   
-   
+
+
+
 }
 
 
@@ -684,7 +684,7 @@ ul.sub-menu {
 	left: 50%;
 	margin-left: -65px;
     background-color:white;
-    
+
 }
 
 h2.title:before{
@@ -700,7 +700,7 @@ h2.title:before{
 }
 
 .category-products .panel {
-	 
+
 	border: 0px;
 	border-radius: 0px;
 	box-shadow:none;
@@ -713,7 +713,7 @@ h2.title:before{
   border: 0 none;
   color: #FFFFFF;
   padding: 5px 20px;
-    
+
 }
 
 .category-products .panel-default .panel-heading .panel-title a {
@@ -836,7 +836,7 @@ h2.title {
   color: #2F811D;
   background-color:white;
   border: 30px;
-  border-radius:  50px; 
+  border-radius:  50px;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   font-weight: bold;
@@ -902,7 +902,7 @@ h2.title {
   transition: height 500ms ease 0s;
   width: 100%;
   display: block;
-  
+
 }
 
 .single-products:hover .product-overlay {
@@ -1458,7 +1458,7 @@ h2.title {
   outline: medium none;
   padding-left: 10px;
   width: 100%;
-   
+
 }
 
 .login-form form span{
@@ -1571,7 +1571,7 @@ h2.title {
 #cart_items .cart_info {
   border: 1px solid #E6E4DF;
   margin-bottom: 50px;
-   margin-top: 10px;  
+   margin-top: 10px;
 }
 
 
@@ -1659,7 +1659,7 @@ h2.title {
   font-size: 16px;
   text-align: center;
   font-family: 'Roboto',sans-serif;
-  
+
 }
 
 
@@ -1811,7 +1811,7 @@ h2.title {
   box-shadow: 5px 5px 18px #888888;
 }
 .billing-form{
-    margin-top: 15px;  
+    margin-top: 15px;
     margin-left:70px;
     margin-bottom:10px;
 }
@@ -1898,8 +1898,8 @@ h2.title {
 
 
 
-.shopper-info p, 
-.bill-to p, 
+.shopper-info p,
+.bill-to p,
 .order-message p {
   color: #696763;
   font-size: 20px;
@@ -1922,9 +1922,9 @@ h2.title {
 }
 
 
-.shopper-info > form > input, 
-.form-two > form > select, 
-.form-two > form > input, 
+.shopper-info > form > input,
+.form-two > form > select,
+.form-two > form > input,
 .form-one > form > input {
   background:#F0F0E9;
   border: 0 none;
@@ -1936,7 +1936,7 @@ h2.title {
 
 .form-two > form > select {
   padding:10px 5px
-  
+
 }
 
 .form-two {
@@ -1980,27 +1980,27 @@ h2.title {
   margin-right: 30px;
 }
 
-#cart_items .cart_info 
+#cart_items .cart_info
 .table.table-condensed.total-result {
   margin-bottom: 10px;
   margin-top: 35px;
   color: #696763
 }
 
-#cart_items .cart_info 
+#cart_items .cart_info
 .table.table-condensed.total-result tr {
   border-bottom: 0
 }
 
-#cart_items .cart_info 
+#cart_items .cart_info
 .table.table-condensed.total-result span {
   color: #45B649;
   font-weight: 700;
   font-size: 16px
 }
 
-#cart_items .cart_info 
-.table.table-condensed.total-result 
+#cart_items .cart_info
+.table.table-condensed.total-result
 .shipping-cost {
   border-bottom: 1px solid #F7F7F0;
 }
@@ -2014,7 +2014,7 @@ h2.title {
   margin-bottom: 70px
 }
 
-.contact-info .heading, 
+.contact-info .heading,
 .contact-form .heading {
   text-transform: capitalize;
 }
@@ -2023,7 +2023,7 @@ h2.title {
   margin-bottom: 20px;
 }
 
-#contact-page 
+#contact-page
 .form-control::-moz-placeholder {
   color: #8D8D8D;
 }
@@ -2051,7 +2051,7 @@ h2.title {
 }
 
 
-#contact-page .form-control:focus, 
+#contact-page .form-control:focus,
 #contact-page .form-control:hover {
   box-shadow: inherit;
   border-color: #FDB45E;
@@ -2083,7 +2083,7 @@ h2.title {
 /* My profile****************** */
 
 .profile {
- 
+
   position: relative;
   display: flex;
   flex-direction: column;
@@ -2110,19 +2110,19 @@ h2.title {
     padding-bottom: 2px;
     padding-top: 3px;
     background-color:white ;
-     box-shadow: 0px 0px 5px #888888; 
+     box-shadow: 0px 0px 5px #888888;
      margin-top:0px;
      margin-bottom:3px;
      border: 0 solid white;
      border-radius:50px;
-    
+
 }
 .mb-0{
     font-weight: bold;
 }
 
 .col-sm-9{
-    margin-top: 5px; 
+    margin-top: 5px;
     font-weight: bold;
 }
 .mt-3{
@@ -2133,7 +2133,7 @@ h2.title {
 /*Contact********************************/
 
 .contact {
- 
+
   position: relative;
   display: flex;
   flex-direction: column;
@@ -2167,7 +2167,7 @@ h2.title {
 }
 /*About us*******************/
 .about{
- 
+
   position: relative;
   display: flex;
   flex-direction: column;
@@ -2186,7 +2186,7 @@ h2.title {
   padding-bottom: 10px;
 }
 .mem{
-   
+
     box-sizing: inherit;
     box-shadow: 5px 2px 5px #888888;
     padding-top: 10px;
@@ -2195,10 +2195,17 @@ h2.title {
     padding-bottom: 10px;
     background-color: #F3FBF7;
     border: 5px solid  #F3FBF7;
-  
+
 }
 .join-us{
     margin-top: 150px;
     margin-left: 150px;
-    
+
+}
+
+.pagination-area-numbered{
+    position:relative;
+    left: -50%;
+    float:right;
+    width:auto;
 }
