--- a/New_app/public/frontEnd/css/main.css
+++ b/New_app/public/frontEnd/css/main.css
@@ -2322,9 +2322,10 @@ h2.title {
 	margin-top:20px;
 	text-align:center;
 	color:black;
-    margin-bottom: 20px;
-	border:1px solid black;
-	padding:2px;
+  margin-bottom: 20px;
+  box-shadow: 5px 10px 18px #888888;
+  padding:2px;
+  padding-bottom: 200px;
 }
 .table-striped{
 	text-align:center;
